--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -11,13 +11,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: 18
+        node-version: "18"
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js 18
+    - name: Use Node.js "18"
       uses: actions/setup-node@v3
       with:
-        node-version: 18
+        node-version: "18"
     - run: npm ci
     - name: serverless deploy
       uses: serverless/github-action@v3.2
@@ -26,5 +26,3 @@ jobs:
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        # SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
-        # or if using AWS credentials directly
