--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -9,15 +9,12 @@ jobs:
   deploy:
     name: deploy
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: "18"
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js "18"
+    - name: Use Node.js 14
       uses: actions/setup-node@v3
       with:
-        node-version: "18"
+        node-version: "14"
     - run: npm ci
     - name: serverless deploy
       uses: serverless/github-action@v3.2
